--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Deficiency Decision Tool (Prototype)</title>
+  <title>Deficiency Decision Tool (POC)</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -21,17 +21,26 @@
       <div id="caseMeta" class="muted"></div>
     </header>
 
-    <section id="screen" class="card">
-      <!-- app.js renders into here -->
+    <section id="screen" class="card" aria-live="polite">
+      <!-- app.js renders here -->
     </section>
 
-    <footer class="app-footer muted">
-      <span id="statusLine"></span>
+    <footer class="app-footer">
+      <div class="footer-left muted" id="statusLine"></div>
+      <div class="footer-right">
+        <button id="btnNew" class="secondary">New Case</button>
+        <button id="btnBack" class="secondary">Back</button>
+        <button id="btnDownload" class="secondary">Download Case JSON</button>
+      </div>
     </footer>
   </main>
 
   <!-- -------------------------------------------------
        Scripts (load order matters)
+       1) Data loaders
+       2) State management
+       3) Engine (actions -> decision engine -> validators)
+       4) App UI glue (last)
   -------------------------------------------------- -->
   <script src="js/data/packLoader.js"></script>
   <script src="js/state/caseStore.js"></script>
@@ -43,3 +52,4 @@
   <script src="js/app.js"></script>
 </body>
 </html>
+
